# code_playground

./: .gitignore  .project  README.md
Algorithm_test/: .project
algorithm/: .gitignore
c++/compiler/: .gitignore  Code.cpp  Code.h  Datatype.h  Generator.cpp  Machine.cpp  Main  Main.cpp  Main.h  Node.h  Printer.cpp  README.md  Scanner.cpp  Token.cpp  Token.h
c++/interpreter/: .gitignore  BuiltinFunctionTable.cpp  Datatype.cpp  Interpreter.cpp  Main.cpp  Main.h  Node.h  Parser.cpp  Printer.cpp  README.md  Scanner.cpp  Token.cpp  Token.h
c/ipc/: README.md  build.sh  pipe.c  processinfo
c/ml/: .gitignore  README.md  build.sh  cost.txt  gates  gates.c  main.c  twice.c  xor  xor.c
elixir/: README.md
elixir/7kyu/: descending_order.exs
elixir/8kyu/: beginner_serires.exs  convert_a_number_to_a_string.exs  convert_number_to_reversed_of_digits.exs  function1_hello_world.exs  function2_squaring_an_argument.exs  is_it_a_palindrome.exs  is_it_even.exs  the_if_function.exs
elixir/basics/: README.md
elixir/elixir_programming/: README.md
go/: README.md
go/basics/: README.md  go.mod
go/codewars/: go.mod
go/data_structure/: go.mod
go/go_etherscan/: go.mod  go.sum  main.go
go/go_tendermint_kvstore/: .gitignore  (+4 more)
java/: README.md
javascript/: README.md
ruby/: README.md  fiber.rb  poker.txt  testfile
rust/web/axum-basic-web/: Cargo.toml  README.md
rust/web/axum-basic-web/src/: ctx.rs  error.rs  log.rs  main.rs  model.rs
rust/web/axum-basic-web/src/web/: mod.rs  mw_auth.rs  routes_login.rs  routes_ticket.rs
rust/web/axum-basic-web/tests/: quick_dev.rs
(+3225 files in other folders)
